Project

General

Profile

Actions

Bug #10542

closed

ceph-fuse cap trimming fails with: mount: only root can use "--options" option

Added by John Spray over 9 years ago. Updated almost 7 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
-
Category:
Administration/Usability
Target version:
-
% Done:

0%

Source:
other
Tags:
Backport:
Regression:
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(FS):
ceph-fuse
Labels (FS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

This appears to be from:

 760 static void remount_cb(void *handle)
 761 {
 762   // used for trimming kernel dcache. when remounting a file system, linux kernel
 763   // trims all unused dentries in the file system
 764   char cmd[1024];
 765   CephFuse::Handle *cfuse = (CephFuse::Handle *)handle;
 766   snprintf(cmd, sizeof(cmd), "mount -i -o remount %s", cfuse->mountpoint);
 767   system(cmd);
 768 }

Seen on fedora when running ceph-fuse as unprivileged user.

ceph-qa-suite runs ceph-fuse as root, so presumably doesn't see this issue. Side note : maybe we should be running ceph-fuse as an unprivileged user in testing?


Related issues 1 (0 open1 closed)

Related to CephFS - Bug #10277: ceph-fuse: Consistent pjd failure in getcwdResolvedZheng Yan12/08/2014

Actions
Actions #1

Updated by Greg Farnum about 9 years ago

I tested this on Fedora 20 (rex004) and am not seeing any warnings. Where did it show up for you?

Actions #2

Updated by John Spray about 9 years ago

It comes out of stdout/stderr (i.e. not the ceph log). Was visible for me in a ./ceph-fuse -d terminal.

Actions #3

Updated by Greg Farnum about 9 years ago

Ah, I managed to get it with the "-d" flag. I was under the apparently mistaken impression that if it ran as a process we would get the stdout in the terminal anyway, but I guess we managed to shut it up some time in the last several years. ;)

Actions #4

Updated by Greg Farnum about 9 years ago

This is at least no longer an issue on kernels older than 3.18 as we aren't doing remount with them as of commit:5f42b54ab15e77c983cb0d8ac81df383c395f6f0 :)

Actions #5

Updated by Greg Farnum almost 8 years ago

  • Category set to Administration/Usability
  • Component(FS) ceph-fuse added

I think this got resolved into one of the many fuse cache invalidate PRs, but I'm not sure.

Actions #6

Updated by Patrick Donnelly almost 7 years ago

  • Status changed from New to Resolved

This is caught during startup now and causes ceph-fuse to fail unless --client-die-on-failed-remount=false is set. Marking this as resolved.

Actions

Also available in: Atom PDF